tests/snapshots/adjacently_tagged_enum-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
t%5BUnit%5D
