tests/snapshots/adjacently_tagged_enum-5.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
t[Tuple]&
c[0]=3&
c[1]=4
