tests/snapshots/adjacently_tagged_enum-6.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
t%5BTuple%5D&
c%5B0%5D=3&
c%5B1%5D=4
