tests/snapshots/adjacently_tagged_enum-7.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
t[Struct]&
c[name]=item&
c[count]=42
