tests/snapshots/adjacently_tagged_enum.snap
---
source: tests/test_roundtrip.rs
expression: serialized
info:
  use_form_encoding: false
snapshot_kind: text
---
t[Unit]
