tests/snapshots/adjacently_tagged_enum@form-2.snap
---
source: tests/test_roundtrip.rs
description: "Newtype(\"adjacent\")"
---
t%5BNewtype%5D&
c=adjacent
