tests/snapshots/adjacently_tagged_enum@form-3.snap
---
source: tests/test_roundtrip.rs
description: "Tuple(3, 4)"
---
t%5BTuple%5D&
c%5B0%5D=3&
c%5B1%5D=4
