tests/snapshots/adjacently_tagged_enum@form-4.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
t%5BStruct%5D&
c%5Bname%5D=item&
c%5Bcount%5D=42
