tests/snapshots/adjacently_tagged_enum@form.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
t%5BUnit%5D
